--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
   <div class="container">
     <h1>Biodata Diri</h1>
-    <img class="profile-pic" src="https://example.com/foto-profil.jpg" alt="Foto Profil">
+    <img class="profile-pic" src="https://scontent.fkno3-1.fna.fbcdn.net/v/t39.30808-6/330297923_870807184013086_8984237513151145735_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeEAWobKH6zl97s0kSxqEj4eGJGfkgv2MgYYkZ-SC_YyBuoQxSLVTZGE5aT9uzFVt9dBtsu4l98Q-kS3TRzIE0_S&_nc_ohc=0D7o_VAdBpoAX93vYQv&_nc_ht=scontent.fkno3-1.fna&oh=00_AfByUcM1ywDNf5uYHwIanYTRaBILDy8X0nv0HTvB-llo1g&oe=64916833" alt="Foto Profil">
     <div class="info">
       <p><span>Nama:</span> Dicky Wahyudi</p>
       <p><span>Umur:</span> 21 Tahun</p>
