--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ h3 {
 </head>
 <body>
   <div class="parallax-container">
-    <div class="parallax-bg" style="background-image: url('foto-profil.jpg');"></div>
+    <div class="parallax-bg" style="background-image: url('fot-profil.jpg');"></div>
     <div class="parallax-content">
       <div class="container">
         <h1>Curriculum Vitae</h1>
        <!-- <img class="profile-pic" src="img/foto-profil.jpg" alt="Foto Profil">-->
-       <P><img class="cv-image" src="img/1.png" alt="Lembar CV 1">
-       <img class="cv-image" src="img/2.png" alt="Lembar CV 2"></P>
+       <P><img class="cv-image" src="1.png" alt="Lembar CV 1">
+       <img class="cv-image" src="2.png" alt="Lembar CV 2"></P>
        <div class="info">
          <!-- <p><span>Nama:</span> Dicky Wahyudi</p>
           <p><span>Umur:</span> 21 Tahun</p>
